# easytodo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  easytodo.example.toml  install.sh
.github/workflows/: release.yml
src/: action.rs  app.rs  errors.rs  lib.rs  main.rs
src/commands/: mod.rs  parser.rs
src/config/: mod.rs
src/task/: model.rs  store.rs
src/tui/: command_bar.rs  mod.rs  modal.rs  style.rs  task_list.rs
