[package]
name = "easytodo"
version = "1.1.0"
edition = "2024"
description = "A terminal-based todo app with file-based task storage, command bar, and MCP server"
keywords = ["todo", "tui", "terminal", "productivity", "mcp"]
categories = ["command-line-utilities", "development-tools"]
authors = ["junaidxyz"]
license = "MIT"
repository = "https://github.com/junaidxyz/easytodo"
readme = "README.md"

[dev-dependencies]
tempfile = "3"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
rand = "0.8"
